@@ -1,5 +1,5 @@
-AUX xorg-edit-08.08.06-makefile.patch 2202 RMD160 7a02a2e4e0f7026488071b81638cd5813a7b6cda SHA1 88d6f1880a11118aa8d01b59bb324fa2bda650f7 SHA256 51b16e6ffd93f4e5a79ce4ff11abd59a2b320a30ab0792b74beee992978ffea1
+AUX xorg-edit-08.08.06-makefile.patch 2257 RMD160 0eb449642b9f11f84330bb349cd7ca3051a56144 SHA1 96380e30c4b37eda7ddf50ac9f629252c9277f15 SHA256 c173474f37c3740af339950cbadf582bf614b418aba7bbd9efed53afeed57c58
 DIST xorg-edit-08.08.06_src.tar.bz2 101654 RMD160 aaddf1572f817c69d282bdefa2cd005cb47b0f06 SHA1 a9ab607121f571ca2d0c18dd9090e41628eb39ac SHA256 93b189c276df9bae9d9bfbb4212a068aad53b524af6615d1dad7003ee5857967
-EBUILD xorg-edit-08.08.06.ebuild 711 RMD160 15b6d28f133d2bb00d3118fe3da55f0a41c5198c SHA1 6748063eb4c9f7b01c65ea42a2eb46e780f19360 SHA256 5977cf65482e2f9817cec48b3ff0ef84ce549fbb4bf2346fc7b523c767040ea0
-MISC ChangeLog 1594 RMD160 45c1d91e7e3d066475f537cdec7eecc4cbc7cd9c SHA1 5f4016b2b67ed717bed62ab442a53559ea4596dc SHA256 6b28057e4a54d21449ae95b269e41eee7b78d0bb0ac7ceeb590fdba581e32d47
+EBUILD xorg-edit-08.08.06.ebuild 709 RMD160 2e016eb3283a89e22ad9a2af7278ec606ef24783 SHA1 c3eb7e2ebf409f7293dd4ffe0567d758a6e5725e SHA256 535dcc66b240b9cd0b1065f26ec6108552533758f76a3804716fbefe9d107bbe
+MISC ChangeLog 1766 RMD160 f9b876d6ef614cbcfaba5b4102b6f85205a5ca4e SHA1 d004a37889f25c1d66915d022db07eaf52d0af69 SHA256 06cf11912c28f5f0c11c0c8168654d11728e0dcedbba5292150b19225373a66e
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
