@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Aug 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
+  xorg-edit-08.08.06.ebuild, files/xorg-edit-08.08.06-makefile.patch:
+  corrected usage of DESTDIR and WX_GTK_VER
+
   16 Aug 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
   xorg-edit-08.08.06.ebuild, files/xorg-edit-08.08.06-makefile.patch:
   src_install fixed
